--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 
 @layer components {
   .mycontainer {
-    @apply container mx-auto px-40 py-15 max-w-6xl ;
+    @apply  px-40 py-15 w-full;
+  }
+}
+@layer components {
+  .manager {
+    @apply  mx-auto px-40 py-15 max-w-6xl ;
   }
 }
