--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .mycontainer {
-    @apply  px-40 py-15 w-full;
+    @apply  px-5 sm:px-10 md:px-20 lg:px-40 py-4 w-full;
   }
 }
 @layer components {
